# cache-rs

./: .gitattributes  .gitignore  ALGORITHM_GUIDE.md  ANALYSIS_REPORT.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  MIRI.md  MIRI_ANALYSIS.md  MIRI_FAILURE_EVIDENCE.md  MIRI_INTEGRATION_SPEC.md  MIRI_PLAN_SUMMARY.md  MIRI_QUICK_REFERENCE.md  MIRI_REVIEW_CHECKLIST.md  MIRI_VALIDATION.md  README.md  SECURITY.md  codecov.yml  feature_req.md  tasks.md
.config/: nextest.toml
.github/: copilot-instructions.md  tribal-knowledge.json
.github/agents/: cache-rs-architect.agent.md  cache-rs-developer.agent.md
.github/instructions/: memory.instructions.md  rust-patterns.instructions.md  spec-templates.instructions.md
.github/workflows/: README.md  miri.yml  rust.yml
benches/: README.md  cache_benchmarks.rs  concurrent_benchmarks.rs  criterion_benchmarks.rs
cache-simulator/: Cargo.toml  README.md  run_full_benchmark.sh  run_simulations.sh  segment_analysis.csv  segment_analysis_constrained.csv  segment_analysis_fair.csv
cache-simulator/examples/: cache_simulation.rs
cache-simulator/src/: generator.rs  input.rs  lib.rs  main.rs  models.rs  runner.rs  stats.rs
cache-simulator/test_data/: requests.csv
docs/: CACHE_EVICTION_SURVEY.md  RFC_003_CACHE_ENTRY_REDESIGN.md  SIZE_AWARE_CACHE_REVIEW_README.md  SIZE_AWARE_CACHING_DESIGN_SPEC.md  SPEC_VS_REVIEW_COMPARISON.md  TTL_EVICTION_HANDLER_SPEC.md  concurrent_cache.md  size_aware_cache_EXECUTIVE_SUMMARY.md  size_aware_cache_RECOMMENDATIONS.md  size_aware_cache_REVIEW.md  size_aware_cache_VISUAL_SUMMARY.md  tasks.md
docs/agent-artifacts/: architect-spec.md  pop-api-tasks.md
docs/design-spec/: pop-api-rationalization-spec.md  unified-put-api-spec.md
examples/: cache_comparison.rs  concurrent_usage.rs  metrics_demo.rs
scripts/: miri-test.sh
src/: concurrent.rs  config.rs  entry.rs  gdsf.rs  lfu.rs  lfuda.rs  lib.rs  list.rs  lru.rs  meta.rs  safety.md  slru.rs
src/concurrent/: gdsf.rs  lfu.rs  lfuda.rs  lru.rs  slru.rs
src/config/: concurrent_gdsf.rs  concurrent_lfu.rs  concurrent_lfuda.rs  concurrent_lru.rs  concurrent_slru.rs  gdsf.rs  lfu.rs  lfuda.rs  lru.rs  mod.rs  slru.rs
src/metrics/: gdsf.rs  lfu.rs  lfuda.rs  lru.rs  mod.rs  slru.rs
tests/: concurrent_correctness_tests.rs  concurrent_stress_tests.rs  correctness_tests.rs  no_std_tests.rs  test_miri_stacked_borrows.rs  test_stacked_borrows_minimal.rs
