[package]
name = "cache-rs"
version = "0.2.0"
authors = ["sigsegved"]
categories = ["caching", "no-std", "concurrency"]
description = "A high-performance, memory-efficient cache implementation supporting multiple eviction policies including LRU, LFU, LFUDA, SLRU and GDSF"
readme = "README.md"
repository = "https://github.com/sigsegved/cache-rs"
homepage = "https://github.com/sigsegved/cache-rs"
documentation = "https://docs.rs/cache-rs"
license = "MIT"
keywords = ["cache", "eviction", "lru", "memory", "concurrent"]
rust-version = "1.74.0"
exclude = ["/.github", "/.gitignore"]
edition = "2021"

[features]
default = ["hashbrown"]
nightly = ["hashbrown/nightly"]
std = []
concurrent = ["parking_lot"]

[dependencies]
hashbrown = { version = "0.14.5", optional = true }
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
scoped_threadpool = "0.1.*"
stats_alloc = "0.1.*"
criterion = "0.5.1"

[[bench]]
name = "criterion_benchmarks"
harness = false

[[bench]]
name = "concurrent_benchmarks"
harness = false
required-features = ["concurrent"]