[package]
name = "cache-simulator"
version = "0.2.0"
authors = ["sigsegved"]
description = "A powerful simulator for comparing and benchmarking different cache eviction algorithms"
repository = "https://github.com/sigsegved/cache-rs"
homepage = "https://github.com/sigsegved/cache-rs"
documentation = "https://docs.rs/cache-simulator"
readme = "README.md"
license = "MIT"
keywords = ["cache", "simulation", "benchmark", "performance", "eviction"]
categories = ["caching", "simulation", "development-tools", "performance"]
rust-version = "1.74.0"
exclude = ["/.github", "/.gitignore"]
edition = "2021"
publish = false  # This is an internal tool, not published to crates.io

[dependencies]
cache-rs = { path = "..", features = ["concurrent", "std"] }
moka = { version = "0.12", features = ["sync"] }
ahash = "0.8"
csv = "1.3.0"
glob = "0.3.1"
rand = "0.8.5"
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "cache-simulator"
path = "src/main.rs"

[[bin]]
name = "traffic-generator"
path = "src/bin/traffic_generator.rs"
